--- a/tutorials/play_SignedDistance_EDContact.ipynb
+++ b/tutorials/play_SignedDistance_EDContact.ipynb
@@ -1126,7 +1126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Interpolate Bowl's SDF onto Bell Pepper's surface"
+    "### Query Bowl's SDF on Bell Pepper's surface"
    ]
   },
   {
@@ -1143,8 +1143,8 @@
       "pepper_tri_mesh.num_vertices() = 486\n",
       "bowl_tri_mesh.num_vertices() = 3957\n",
       "Done\n",
-      "CPU times: user 316 ms, sys: 28.9 ms, total: 345 ms\n",
-      "Wall time: 306 ms\n"
+      "CPU times: user 296 ms, sys: 40.9 ms, total: 337 ms\n",
+      "Wall time: 292 ms\n"
      ]
     }
    ],
@@ -1203,11 +1203,15 @@
      "text": [
       "pepper_mesh.num_vertices() = 486\n",
       "bowl_mesh.num_vertices() = 3957\n",
-      "Done\n"
+      "Done\n",
+      "CPU times: user 167 ms, sys: 1.11 ms, total: 169 ms\n",
+      "Wall time: 162 ms\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
+    "\n",
     "meshcat.Delete(\"signed_distances\")\n",
     "\n",
     "all_ids = inspector.GetAllGeometryIds()\n",
@@ -1228,52 +1232,31 @@
     "# Signed distances at pepper points from bowl mesh\n",
     "# P is the local frame of the pepper\n",
     "X_WP = query_object.GetPoseInWorld(pepper_id)\n",
-    "vertices = np.zeros([3,1])\n",
-    "colors = np.zeros([3, 1])\n",
-    "first_vertex = True\n",
-    "first_color = True\n",
-    "for p_PQ in pepper_mesh.vertices() :\n",
-    "  p_WQ = X_WP.multiply(p_PQ)\n",
-    "  if first_vertex:\n",
-    "    first_vertex = False\n",
-    "    vertices = p_WQ.reshape([3,1])\n",
+    "\n",
+    "vertex_list = [X_WP.multiply(p_PQ) for p_PQ in pepper_mesh.vertices()]\n",
+    "vertices = np.array(vertex_list).transpose()\n",
+    "\n",
+    "triangle_list = [np.array([tri.vertex(0), tri.vertex(1), tri.vertex(2)]) for tri in pepper_mesh.triangles()]\n",
+    "triangles = np.array(triangle_list).transpose()\n",
+    "\n",
+    "def DistanceColor(distance_value):  \n",
+    "  if distance_value > 0:\n",
+    "    color = np.array([1, 0.2, 0.2])\n",
     "  else:  \n",
-    "    vertices = np.hstack((vertices, p_WQ.reshape([3,1])))\n",
-    "  signed_distances = query_object.ComputeSignedDistanceToPoint(p_WQ)\n",
+    "    color = np.array([0.2, 0.2, 1])\n",
+    "  return color\n",
+    "\n",
+    "def SignedDistanceColor(signed_distances):\n",
     "  for d in signed_distances:\n",
     "    if d.id_G == bowl_id:\n",
-    "      if d.distance > 0:\n",
-    "        color = np.array([[1],\n",
-    "                          [0.2],\n",
-    "                          [0.2]])\n",
-    "      else:  \n",
-    "        color = np.array([[0.2],\n",
-    "                          [0.2],\n",
-    "                          [1]])\n",
-    "      # DrawToNearestPoint(p_WQ, d)\n",
-    "      if first_color:\n",
-    "        first_color = False\n",
-    "        colors = color\n",
-    "      else:\n",
-    "        colors = np.hstack((colors, color))\n",
-    "        \n",
-    "        \n",
+    "        return DistanceColor(d.distance)    \n",
+    "  return np.zeros([3,1])\n",
     "\n",
-    "triangles = np.zeros([3,1])\n",
-    "first_triangle = True\n",
-    "for tri in pepper_mesh.triangles() :\n",
-    "  v0 = tri.vertex(0)\n",
-    "  v1 = tri.vertex(1)\n",
-    "  v2 = tri.vertex(2)\n",
-    "  triangle = np.array([[v0],\n",
-    "                       [v1],\n",
-    "                       [v2]])   \n",
-    "  if first_triangle:\n",
-    "    triangles = triangle\n",
-    "    first_triangle = False\n",
-    "  else:\n",
-    "    triangles = np.hstack((triangles, triangle))    \n",
-    "\n",
+    "signed_distances_list = [query_object.ComputeSignedDistanceToPoint(p_WQ) for p_WQ in vertex_list]\n",
+    "color_list = [SignedDistanceColor(sd) for sd in signed_distances_list]\n",
+    "colors = np.array(color_list).transpose()\n",
+    "    \n",
+    "    \n",
     "meshcat.Delete(\"BellPepper_with_BowlSDF\")\n",
     "meshcat.SetTriangleColorMesh(\"BellPepper_with_BowlSDF/shade\",\n",
     "                         vertices, triangles, colors, wireframe=False)\n",
