Add a coarser embedded pressure field (1cm offset, 2cm grid)

--- a/tutorials/hydroelastic_embpres.ipynb
+++ b/tutorials/hydroelastic_embpres.ipynb
@@ -56,7 +56,9 @@
    "metadata": {},
    "source": [
     "## Use Experimental VTK file of Embedded Signed Distance Field instead of Body-fitted Tetrahedral Mesh\n",
-    "\n"
+    "\n",
+    "The finer one (pepper_embsdf.vtk, offset 5mm, grid 1cm) is slower than the body-fitted mesh.\n",
+    "The coarser one (yellow_pepper_Offset1cmGrid2cm_sdfield.vtk, offset 1cm, grid 2cm) is faster.\n"
    ]
   },
   {
@@ -70,7 +72,10 @@
     "    \"package://drake_models/veggies/yellow_bell_pepper_no_stem_low.sdf\")).read_text(encoding=\"utf-8\")\n",
     "bell_pepper_str = bell_pepper_str.replace(\n",
     "    \"package://drake_models/veggies/assets/yellow_bell_pepper_no_stem_low.vtk\",\n",
-    "    \"package://drake/tutorials/pepper_embsdf.vtk\"\n",
+    "    # Choose one from these three choices: original (100% rtr), finer (28% rtr), coarser (38% rtr).\n",
+    "    # \"package://drake_models/veggies/assets/yellow_bell_pepper_no_stem_low.vtk\",\n",
+    "    # \"package://drake/tutorials/pepper_embsdf.vtk\"\n",
+    "    \"package://drake/tutorials/yellow_pepper_Offset1cmGrid2cm_sdfield.vtk\"\n",
     ")\n",
     "Code(bell_pepper_str, language=\"xml\")"
    ]
