Keep only the bell pepper on the table. Distance between surfaces.

--- a/tutorials/hydroelastic_embpres.ipynb
+++ b/tutorials/hydroelastic_embpres.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "from IPython.display import Code\n",
     "\n",
-    "from pydrake.geometry import StartMeshcat\n",
+    "from pydrake.geometry import StartMeshcat, Rgba\n",
     "from pydrake.math import RigidTransform\n",
     "from pydrake.multibody.meshcat import ContactVisualizer, ContactVisualizerParams\n",
     "from pydrake.multibody.parsing import PackageMap, Parser\n",
@@ -72,7 +72,8 @@
     "    \"package://drake_models/veggies/yellow_bell_pepper_no_stem_low.sdf\")).read_text(encoding=\"utf-8\")\n",
     "bell_pepper_str = bell_pepper_str.replace(\n",
     "    \"package://drake_models/veggies/assets/yellow_bell_pepper_no_stem_low.vtk\",\n",
-    "    # Choose one from these three choices: original (100% rtr), finer (28% rtr), coarser (38% rtr).\n",
+    "    # Choose one from these three choices: original (300% rtr),\n",
+    "    # finer EmPres (170% rtr), or coarser EmPres (300% rtr).\n",
     "    # \"package://drake_models/veggies/assets/yellow_bell_pepper_no_stem_low.vtk\",\n",
     "    # \"package://drake/tutorials/pepper_embsdf.vtk\"\n",
     "    \"package://drake/tutorials/yellow_pepper_Offset1cmGrid2cm_sdfield.vtk\"\n",
@@ -89,51 +90,6 @@
     "# Visualize the SDFormat file you just defined.\n",
     "visualizer = ModelVisualizer(meshcat=meshcat)\n",
     "visualizer.parser().AddModels(file_contents=bell_pepper_str, file_type=\"sdf\")\n",
-    "visualizer.Run(loop_once=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Create compliant-hydroelastic bowl in URDF with the coarse tetrahedral mesh for quick testing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Show the contents of the URDF file.\n",
-    "bowl_str = Path(PackageMap().ResolveUrl(\n",
-    "    \"package://drake_models/dishes/evo_bowl_compliant.urdf\")\n",
-    "    ).read_text(encoding=\"utf-8\")\n",
-    "bowl_str = bowl_str.replace(\n",
-    "    \"package://drake_models/dishes/assets/evo_bowl_fine44k.vtk\",\n",
-    "    \"package://drake_models/dishes/assets/evo_bowl_coarse3k.vtk\"\n",
-    "    )\n",
-    "Code(bowl_str, language=\"xml\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_mode = \"TEST_SRCDIR\" in os.environ\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Visualize the URDF file.\n",
-    "visualizer = ModelVisualizer(meshcat=meshcat)\n",
-    "visualizer.parser().AddModels(file_contents=bowl_str, file_type=\"urdf\")\n",
     "visualizer.Run(loop_once=True)"
    ]
   },
@@ -202,7 +158,6 @@
     "\n",
     "    # Load the assets that we created.\n",
     "    parser.AddModels(file_contents=bell_pepper_str, file_type=\"sdf\")\n",
-    "    parser.AddModels(file_contents=bowl_str, file_type=\"urdf\")\n",
     "    parser.AddModels(url=table_top_url)\n",
     "\n",
     "    # Weld the table top to the world so that it's fixed during simulation.\n",
@@ -212,13 +167,9 @@
     "\n",
     "    # Finalize the plant after loading the scene.\n",
     "    plant.Finalize()\n",
-    "\n",
-    "    # Place the bowl on top of the table.\n",
-    "    X_WB = RigidTransform(p=[0, 0, 0.03])\n",
-    "    plant.SetDefaultFreeBodyPose(plant.GetBodyByName(\"bowl\"), X_WB)\n",
     "    \n",
-    "    # Drop the bell pepper from above the rim of the bowl. \n",
-    "    X_WC = RigidTransform(p=[-0.06, 0, 0.30])\n",
+    "    # Drop the bell pepper 10 centimeters (measured from its frame's origin) above the ground.\n",
+    "    X_WC = RigidTransform(p=[0, 0, 0.10])\n",
     "    plant.SetDefaultFreeBodyPose(plant.GetBodyByName(\"yellow_bell_pepper_no_stem\"), X_WC)\n",
     "\n",
     "    return builder, plant"
@@ -245,6 +196,7 @@
     "    ApplyVisualizationConfig(\n",
     "        builder=builder, meshcat=meshcat,\n",
     "        config=VisualizationConfig(\n",
+    "                 default_proximity_color=Rgba(r=0.8, g=0, b=0, a=0.5),\n",
     "                 publish_contacts=False))    \n",
     "    ContactVisualizer.AddToBuilder(\n",
     "        builder=builder, plant=plant, meshcat=meshcat,\n",
@@ -284,12 +236,10 @@
     "\n",
     "simulator = Simulator(diagram)\n",
     "\n",
-    "# In interactive mode, simulate for longer time.\n",
-    "# In test mode, simulate for shorter time.\n",
-    "sim_time = 2 if not test_mode else 0.01\n",
+    "sim_time = 2\n",
     "\n",
     "meshcat.StartRecording()\n",
-    "simulator.set_target_realtime_rate(1)\n",
+    "simulator.set_target_realtime_rate(10)\n",
     "simulator.AdvanceTo(sim_time)\n",
     "meshcat.StopRecording()\n",
     "meshcat.PublishRecording()"
