Replay showing the collision mesh enclosing the visual mesh

--- a/tutorials/hydroelastic_embpres.ipynb
+++ b/tutorials/hydroelastic_embpres.ipynb
@@ -249,6 +249,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Replay showing the collision mesh enclosing the visual mesh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meshcat.SetProperty(\n",
+    "    \"proximity\",\"visible\", True)\n",
+    "meshcat.SetProperty(\n",
+    "    \"proximity/yellow_bell_pepper_no_stem\",\"visible\", True)\n",
+    "meshcat.SetProperty(\n",
+    "    \"proximity/table_top\",\"visible\", False)\n",
+    "meshcat.PublishRecording()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Download simulation result into a html file for sharing\n",
     "\n",
     "You can download the simulation result into a self-contained html file, allowing others to playback the simulated results without simulating. The following code prints the URL for downloading. Click on the printed URL to download."
