Auto generate EmPress mesh and signed-distance field.

--- a/tutorials/hydroelastic_embpres.ipynb
+++ b/tutorials/hydroelastic_embpres.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hydroelastic Contact: Embedded Pressure Field\n",
+    "# Hydroelastic Contact: Embedded Pressure Field (EmPress)\n",
     "For instructions on how to run these tutorial notebooks, please see the [index](./index.ipynb).\n",
     "\n",
     "If you are not familiar with Drake's hydroelastic contact, study [hydroelastic_contact_basics.ipynb](./hydroelastic_contact_basics.ipynb). You can also find more information in Hydroelastic Contact User Guide [here.](https://drake.mit.edu/doxygen_cxx/group__hydroelastic__user__guide.html)"
@@ -57,8 +57,9 @@
    "source": [
     "## Use Experimental VTK file of Embedded Signed Distance Field instead of Body-fitted Tetrahedral Mesh\n",
     "\n",
-    "The finer one (pepper_embsdf.vtk, offset 5mm, grid 1cm) is slower than the body-fitted mesh.\n",
-    "The coarser one (yellow_pepper_Offset1cmGrid2cm_sdfield.vtk, offset 1cm, grid 2cm) is faster.\n"
+    "The finer one (offset 5mm, grid 1cm) is slower (170% rtr) than the body-fitted mesh (300% rtr). The coarser one (offset 1cm, grid 2cm) is about the same as the body-fitted mesh.\n",
+    "\n",
+    "New development: the automatically generated EmPress (1mm offset, 2 cm grid) is the fastest (600% real-time rate)."
    ]
   },
   {
@@ -72,11 +73,19 @@
     "    \"package://drake_models/veggies/yellow_bell_pepper_no_stem_low.sdf\")).read_text(encoding=\"utf-8\")\n",
     "bell_pepper_str = bell_pepper_str.replace(\n",
     "    \"package://drake_models/veggies/assets/yellow_bell_pepper_no_stem_low.vtk\",\n",
-    "    # Choose one from these three choices: original (300% rtr),\n",
-    "    # finer EmPres (170% rtr), or coarser EmPres (300% rtr).\n",
-    "    # \"package://drake_models/veggies/assets/yellow_bell_pepper_no_stem_low.vtk\",\n",
+    "    # Choose one from these choices:\n",
+    "    #\n",
+    "    # Original (300% rtr),\n",
+    "    # \"package://drake_models/veggies/assets/yellow_bell_pepper_no_stem_low.vtk\"\n",
+    "    #\n",
+    "    # Old Finer EmPres (170% rtr)\n",
     "    # \"package://drake/tutorials/pepper_embsdf.vtk\"\n",
-    "    \"package://drake/tutorials/yellow_pepper_Offset1cmGrid2cm_sdfield.vtk\"\n",
+    "    #\n",
+    "    # Old Coarser EmPres (300% rtr). \n",
+    "    # \"package://drake/tutorials/yellow_pepper_Offset1cmGrid2cm_sdfield.vtk\"\n",
+    "    #\n",
+    "    # New Auto EmPress (600% rtr)\n",
+    "    \"package://drake/tutorials/yellow_pepper_EmPress_sdfield.vtk\"\n",
     ")\n",
     "Code(bell_pepper_str, language=\"xml\")"
    ]
@@ -90,7 +99,11 @@
     "# Visualize the SDFormat file you just defined.\n",
     "visualizer = ModelVisualizer(meshcat=meshcat)\n",
     "visualizer.parser().AddModels(file_contents=bell_pepper_str, file_type=\"sdf\")\n",
-    "visualizer.Run(loop_once=True)"
+    "visualizer.Run(loop_once=True)\n",
+    "meshcat.SetProperty(\n",
+    "    \"proximity\",\"visible\", True)\n",
+    "meshcat.SetProperty(\n",
+    "    \"proximity/yellow_bell_pepper_no_stem\",\"visible\", True)"
    ]
   },
   {
