--- a/tutorials/hydroelastic_embpres.ipynb
+++ b/tutorials/hydroelastic_embpres.ipynb
@@ -78,14 +78,17 @@
     "    # Original (300% rtr),\n",
     "    # \"package://drake_models/veggies/assets/yellow_bell_pepper_no_stem_low.vtk\"\n",
     "    #\n",
-    "    # Old Finer EmPres (170% rtr)\n",
+    "    # Old Finer EmPres (170% rtr), 0.5X of Original.\n",
     "    # \"package://drake/tutorials/pepper_embsdf.vtk\"\n",
     "    #\n",
-    "    # Old Coarser EmPres (300% rtr). \n",
+    "    # Old Coarser EmPres (300% rtr). 1X Original.\n",
     "    # \"package://drake/tutorials/yellow_pepper_Offset1cmGrid2cm_sdfield.vtk\"\n",
     "    #\n",
-    "    # New Auto EmPress (600% rtr)\n",
-    "    \"package://drake/tutorials/yellow_pepper_EmPress_sdfield.vtk\"\n",
+    "    # New Auto EmPress (600% rtr) 2X Original.\n",
+    "    # \"package://drake/tutorials/yellow_pepper_EmPress_sdfield.vtk\"\n",
+    "    #\n",
+    "    # Crudely optimized SDField (600% rtr) 2X Original.\n",
+    "    \"package://drake/tutorials/yellow_pepper_EmPress_optimized_sdfield.vtk\"\n",
     ")\n",
     "Code(bell_pepper_str, language=\"xml\")"
    ]
