Add peg.sdf peg.obj peg.vtk

--- a/tutorials/hydroelastic_cuboids.ipynb
+++ b/tutorials/hydroelastic_cuboids.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hydroelastic Cuboids\n",
+    "# Hydroelastic Peg In Cuboid\n",
     "For instructions on how to run these tutorial notebooks, please see the [index](./index.ipynb).\n",
     "\n",
     "If you are not familiar with Drake's hydroelastic contact, study [hydroelastic_contact_basics.ipynb](./hydroelastic_contact_basics.ipynb). You can also find more information in Hydroelastic Contact User Guide [here.](https://drake.mit.edu/doxygen_cxx/group__hydroelastic__user__guide.html)"
@@ -110,8 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check the content of the SDF file of the cuboid that will use the mesh in the STL file.\n",
-    "# The next block will fail because STL is not supported directly.\n",
+    "# Check the content of the SDF file of the cuboid that will use the mesh in the VTK file.\n",
     "cuboid_url = \"package://drake/tutorials/asset_files/cuboid.sdf\"\n",
     "cuboid_str = Path(PackageMap().ResolveUrl(cuboid_url)).read_text(encoding=\"utf-8\")\n",
     "Code(cuboid_str, language=\"xml\")"
@@ -126,6 +125,37 @@
     "# Visualize the SDFormat file you just defined.\n",
     "visualizer = ModelVisualizer(meshcat=meshcat)\n",
     "visualizer.AddModels(url=cuboid_url)\n",
+    "visualizer.Run(loop_once=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import the peg asset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the content of the SDF file of the peg that will use the mesh in the VTK file.\n",
+    "peg_url = \"package://drake/tutorials/asset_files/peg.sdf\"\n",
+    "peg_str = Path(PackageMap().ResolveUrl(peg_url)).read_text(encoding=\"utf-8\")\n",
+    "Code(peg_str, language=\"xml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize the SDFormat file you just defined.\n",
+    "visualizer = ModelVisualizer(meshcat=meshcat)\n",
+    "visualizer.AddModels(url=peg_url)\n",
     "visualizer.Run(loop_once=True)"
    ]
   },
@@ -223,6 +253,7 @@
     "    # Load the assets that we created.\n",
     "    parser.AddModels(url=bell_pepper_url)\n",
     "    parser.AddModels(file_contents=bowl_str, file_type=\"urdf\")\n",
+    "    parser.AddModels(url=peg_url)\n",
     "    parser.AddModels(url=cuboid_url)\n",
     "    parser.AddModels(url=table_top_url)\n",
     "\n",
@@ -238,13 +269,22 @@
     "    X_WB = RigidTransform(p=[0.12, 0.12, 0.03])\n",
     "    plant.SetDefaultFreeBodyPose(plant.GetBodyByName(\"bowl\"), X_WB)\n",
     "    \n",
+    "    \n",
+    "    # Place the peg above the cuboid.\n",
+    "    # The peg is about 3x3x10 centimeters.\n",
+    "    # Place its center at +20cm in Z, so it has 5 centimeters to go\n",
+    "    # before contacting the cuboid.\n",
+    "    X_WPeg = RigidTransform(p=[0.015, 0.015, 0.20])\n",
+    "    plant.SetDefaultFreeBodyPose(plant.GetBodyByName(\"peg\"), X_WPeg)\n",
+    "    \n",
+    "    \n",
     "    # Place the cuboid at the center of the table.\n",
-    "    # The cuboid is about 10 centimeter long, so its pose is +5cm in Z.\n",
+    "    # The cuboid is about 10 centimeter long, so its pose is +10cm in Z.\n",
     "    X_WCuboid = RigidTransform(p=[0, 0, 0.05])\n",
     "    plant.SetDefaultFreeBodyPose(plant.GetBodyByName(\"cuboid\"), X_WCuboid)\n",
     "    \n",
     "    # Drop the bell pepper.\n",
-    "    X_WC = RigidTransform(p=[-0.06, 0, 0.30])\n",
+    "    X_WC = RigidTransform(p=[-0.06, 0, 0.20])\n",
     "    plant.SetDefaultFreeBodyPose(plant.GetBodyByName(\"yellow_bell_pepper_no_stem\"), X_WC)\n",
     "\n",
     "    return builder, plant"
